@@ -1,4 +1,5 @@
 import { useCallback } from '@wordpress/element';
+import { __ } from '@wordpress/i18n';
 import { useStripe, useElements } from '@stripe/react-stripe-js';
 import {
 	onAbortPaymentHandler,
@@ -8,6 +9,8 @@ import {
 	onConfirmHandler,
 } from 'wcstripe/express-checkout/event-handler';
 import {
+	displayExpressCheckoutNotice,
+	expressCheckoutNoticeDelay,
 	getExpressCheckoutButtonStyleSettings,
 	getExpressCheckoutData,
 	normalizeLineItems,
@@ -43,7 +46,7 @@ export const useExpressCheckout = ( {
 	};
 
 	const onButtonClick = useCallback(
-		( event ) => {
+		async ( event ) => {
 			const getShippingRates = () => {
 				// shippingData.shippingRates[ 0 ].shipping_rates will be non-empty
 				// only when the express checkout element's default shipping address
@@ -82,6 +85,20 @@ export const useExpressCheckout = ( {
 
 			// Click event from WC Blocks.
 			onClick();
+
+			if ( getExpressCheckoutData( 'taxes_based_on_billing' ) ) {
+				displayExpressCheckoutNotice(
+					__(
+						'Final taxes charged can differ based on your actual billing address when using Express Checkout buttons (Link, Google Pay or Apple Pay).',
+						'woocommerce-gateway-stripe'
+					),
+					'info',
+					[ 'ece-taxes-info' ]
+				);
+				// Wait for the notice to be displayed before proceeding.
+				await expressCheckoutNoticeDelay();
+			}
+
 			// Global click event handler to ECE.
 			onClickHandler( event );
 			event.resolve( options );
